fixed dark mode

--- a/index.css
+++ b/index.css
@@ -252,7 +252,7 @@ body {
 }
 
 .icon {
-  font-size: 5rem;
+  font-size: 4.5rem;
 }
 
 .desc {
